syntax = "proto3";
enum Cmd{
    NONE = 0;
    READY_C2S = 1;
    DEALCARDS_S2C = 2;
    COMPETEFORLANDLORDROLE_C2S = 3;
    COMPETEFORLANDLORDROLE_S2C = 4;
    PLAYTURN_S2C = 5;
    PLAYCARDS_C2S = 6;
    PLAYCARDS_S2C = 7;
    ILLEGALCARDS_S2C = 8;
    GAMEEND_S2C = 9;
    GAMESTART_S2C = 10;
    BROADCAST_MSG_S2C = 11;
}

message MainMessage{
    uint32 cmd_id = 1;
    bytes data =2;
}

message DealCards_S2C{
    repeated uint32 cards = 1;
    uint32 seat_number = 2;
}

message Ready_C2S{
    uint32 seat_number = 1;
}

message CompeteForLandLordRole_C2S{
    uint32 score = 1;
    uint32 seat_number = 2;
}

message CompeteForLandLordRole_S2C{
    uint32 cur_max_score = 2;
}

message PlayCards_C2S{
    repeated uint32 cards = 1;
    uint32 seat_number = 2;
}

message PlayCards_S2C{
     repeated uint32 cards = 1;
    uint32 seat_number = 2;
}

message IllegalCards_S2C{
    uint32 seat_number = 1;
}

message GameEnd_S2C{
    uint32 seat_number = 1;
}

message PlayTurn_S2C{
    uint32 seat_number = 1;
    repeated uint32 hand_cards = 2;
}

message GameStart_S2C{
    uint32 seat_number = 1;
    uint32 player_id = 2;
}

message BroadCastMsg_S2C{
    string msg = 1;
}





